--- a/meta/Collections/Popular/Movies/TopHD.yml
+++ b/meta/Collections/Popular/Movies/TopHD.yml
@@ -25,6 +25,7 @@ collections:
     tmdb_trending_daily: 10
     tmdb_trending_weekly: 10
     summary: Movies Trending across the internet
+    radarr_add_missing: true
   Popular:
     template: { name: Chart, num: 3 }
     tmdb_popular: 40
