--- a/meta/Collections/Popular/Movies/TopHD.yml
+++ b/meta/Collections/Popular/Movies/TopHD.yml
@@ -26,6 +26,9 @@ collections:
     tmdb_trending_weekly: 10
     summary: Movies Trending across the internet
     radarr_add_missing: true
+    radarr_monitor: movie
+    radarr_search: true
+    radarr_tag: pmmTrend
   Popular:
     template: { name: Chart, num: 3 }
     tmdb_popular: 40
