--- a/meta/Collections/Popular/TV/HD.yml
+++ b/meta/Collections/Popular/TV/HD.yml
@@ -20,6 +20,7 @@ collections:
       list_size: 20
       list_buffer: 20
     summary: Shows your brothers are watching
+    schedule: weekly(sunday)
   Trending:
     template: { name: Chart, num: 2 }
     trakt_trending: 10
@@ -30,6 +31,8 @@ collections:
     sonarr_monitor: latest
     sonarr_search: true
     sonarr_tag: pmmTrend
+    visible_shared: true
+    visible_home: true
   Popular:
     template: { name: Chart, num: 3 }
     tmdb_popular: 40
